2003-07-25  Martin Baulig  <martin@ximian.com>

	* MethodCore.cs (OverridesSomething): New public field; it's set
	from TypeContainer.DefineMembers if this method overrides
	something (which doesn't need to be a method).  Fix #39462.

2003-07-25  Ravi Pratap  <ravi@ximian.com>

	* typemanager.cs (GetMembers): Ensure that the list of members is
	reversed. This keeps things in sync.

2003-07-25  Martin Baulig  <martin@ximian.com>

	* expression.cs (Indexers.GetIndexersForType): Only look in the
	interface hierarchy if the requested type is already an
	interface.  Fixes #46788 while keeping #46502 fixed.

2003-07-25  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.DefineMembers): Check whether all
	readonly fields have been assigned and report warning CS0649 if
	not.

	* statement.cs (LocalInfo.IsFixed): Always return true if this is
	a valuetype.

2003-07-24  Ravi Pratap  <ravi@ximian.com>

	* decl.cs (MemberCache.AddMethods): Reverse the order of the array
	returned from GetMethods to make things consistent with the
	assumptions MCS makes about ordering of methods.

	This should comprehensively fix bug #45127 and it does :-)

	* ecore.cs (MethodGroupExpr.DeclaringType): Correct bug - the
	ordering is actually reverse.

	* Clean up some debug messages I left lying around.

	* interface.cs (Populate*): Get rid of code which emits attributes
	since the stage in which we emit attributes is the 'Emit' stage,
	not the define stage.

	(Emit): Move attribute emission for interface members here.
	
2003-07-22  Ravi Pratap  <ravi@ximian.com>

	* expression.cs (Invocation.OverloadResolve): Follow the spec more
	closely: we eliminate methods in base types when we have an
	applicable method in a top-level type.

        Please see section 14.5.5.1 for an exact description of what goes
	on. 

	This fixes bug #45127 and a host of other related to corlib compilation.

        * ecore.cs (MethodGroupExpr.DeclaringType): The element in the