@@ -520,7 +520,6 @@ namespace Mono.CSharp {
 			TypeContainer attr = TypeManager.LookupAttr (a.Type);
 			AttributeTargets targets = 0;
 
-			
 			if (attr == null) {
 				System.Attribute [] attrs = null;
 				
@@ -535,8 +534,10 @@ namespace Mono.CSharp {
 				}
 					
 				foreach (System.Attribute tmp in attrs)
-					if (tmp is AttributeUsageAttribute) 
+					if (tmp is AttributeUsageAttribute) { 
 						targets = ((AttributeUsageAttribute) tmp).ValidOn;
+                                                break;
+                                        }
 			} else
 				targets = attr.Targets;
 
@@ -581,7 +582,8 @@ namespace Mono.CSharp {
 					return true;
 				else
 					return false;
-			} else if (element is Method || element is Operator || element is InterfaceMethod || element is Accessor) {
+			} else if (element is Method || element is Operator ||
+                                   element is InterfaceMethod || element is Accessor) {
 				if ((targets & AttributeTargets.Method) != 0)
 					return true;
 				else
